# filament

./: .gitignore  CMakeLists.txt  Package.swift  build.sh
.github/workflows/: linux-continuous.yml  release.yml
.swiftpm/xcode/xcuserdata/steftervelde.xcuserdatad/xcschemes/: xcschememanagement.plist
filament/: CMakeLists.txt
filament/backend/: CMakeLists.txt
ios/Sources/: Engine.mm  FSObject.mm  Global.mm  README.md
ios/Sources/Filament/: Camera.mm  Engine.mm  Instance.mm  Material.mm  MaterialInstance.mm  RenderableManager.mm  Renderer.mm  Scene.mm  SwapChain.mm  Texture.mm  TextureSampler.mm  TransformManager.mm  View.mm
ios/Sources/GLTFIO/: AssetLoader.mm  FilamentAsset.mm  MaterialProvider.mm  ResourceLoader.mm
ios/Sources/Utils/: Entity.mm  EntityManager.mm  SimdToMatf.mm
ios/Sources/include/: AssetLoader.h  Camera.h  Colors.h  Engine.h  Entity.h  EntityManager.h  FSObject.h  FilamentAsset.h  Global.h  Instance.h  Material.h  MaterialInstance.h  MaterialProvider.h  RenderableManager.h  Renderer.h  ResourceLoader.h  Scene.h  SimdToMatf.h  SwapChain.h  Texture.h  TextureSampler.h  TransformManager.h  View.h
ios/Swift/: README.md
ios/Swift/Bindings/: Math.h
ios/Swift/Bindings/Filament/: Camera.mm  ColorGrading.mm  Engine.mm  EntityManager.mm  IndirectLight.mm  IndirectLightBuilder.mm  LightBuilder.mm  LightManager.mm  Material.mm  MaterialBuilder.mm  RenderableBuilder.mm  RenderableManager.mm  Renderer.mm  Scene.mm  Skybox.mm  SkyboxBuilder.mm  Stream.mm  StreamBuilder.mm  TextureSampler.mm  ToneMapper.mm  View.mm  Viewport.mm
ios/Swift/Bindings/GLTFIO/: Animator.mm  AssetLoader.mm  FilamentAsset.mm  FilamentInstance.mm  MaterialProvider.mm  ResourceLoader.mm
ios/Swift/Bindings/Utils/: Ktx1Loader.mm
ios/Swift/Bindings/include/Bindings/Filament/: Camera.h  ColorGradingBuilder.h  Engine.h  IndirectLight.h  IndirectLightBuilder.h  LightManager.h  Material.h  MaterialBuilder.h  MaterialInstance.h  RenderableBuilder.h  RenderableManager.h  Renderer.h  Scene.h  VertexBuffer.h  View.h  Viewport.h
ios/Swift/Bindings/include/Bindings/GLTFIO/: Animator.h  AssetLoader.h  FilamentAsset.h  FilamentInstance.h  MaterialProvider.h  ResourceLoader.h
ios/Swift/Bindings/include/Bindings/Utils/: Entity.h  EntityManager.h
ios/Swift/Helpers/: IndirectLightBuilder.swift  Material.swift  MaterialInstance.swift  RenderableBuilder.swift
ios/Swift/Helpers/Filament/: Camera.swift  Viewport.swift
ios/Swift/Helpers/GLTFIO/: Animator.swift  AssetLoader.swift  FilamentAsset.swift  FilamentInstance.swift  MaterialProvider.swift  ResourceLoader.swift
ios/Swift/Samples/: app-template.yml
ios/Swift/Samples/swift-gltf-viewer/: project.yml
ios/Swift/Samples/swift-gltf-viewer/swift-gltf-viewer/: GltfViewer.swift  Scene.swift
ios/Swift/Samples/swift-gltf-viewer/swift-gltf-viewer.xcodeproj/: project.pbxproj
ios/SwiftPackageManager/: Package.swift
libs/bluegl/: CMakeLists.txt
libs/camutils/: CMakeLists.txt
libs/filabridge/: CMakeLists.txt
libs/filaflat/: CMakeLists.txt
libs/filamat/: CMakeLists.txt
libs/filameshio/: CMakeLists.txt
libs/geometry/: CMakeLists.txt
libs/gltfio/: CMakeLists.txt
libs/ibl/: CMakeLists.txt
libs/iblprefilter/: CMakeLists.txt
libs/image/: CMakeLists.txt
libs/ktxreader/: CMakeLists.txt
libs/math/: CMakeLists.txt
libs/uberz/: CMakeLists.txt
libs/utils/: CMakeLists.txt
libs/viewer/: CMakeLists.txt
